feat: add endpoint for update
