# internal/user/param/request/request.go
@@ -1,0 +1,12 @@
+package request
+
+type CreateUser struct {
+	PhoneNumber string
+	FullName    string
+	Password    string
+}
+
+type UpdateProfile struct {
+	PhoneNumber *string
+	FullName    *string
+}
